@@ -8,6 +8,9 @@ What's New in Python 3.2 Release Candidate 1
 Core and Builtins
 -----------------
 
+- Issue #9015, #9611: FileIO.readinto(), FileIO.write() and os.write() clamp
+  the length to 2^31-1 on Windows.
+
 - Issue #8278: On Windows and with a NTFS filesystem, os.stat() and os.utime()
   can now handle dates after 2038.
 
